fixed blog image on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,15 +61,17 @@ ul{
 
 
 .blog-title-photo{
+  vertical-align: left;
+  vertical-align: top;
+  background-size: cover;
+  background-position: center center;
   @media(min-width: 1000px) {
   // Any CSS in here will only be applied if the screen width is less than or equal to 1200px wide
-  vertical-align: left;
-  
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
   min-height: 480px;
-  vertical-align: top;
+  background-attachment: fixed;
+  }
+  @media(max-width: 800px){
+    min-height: 200px;
   }
 }
 
